sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var i:Int 
            ^AlgBubbleSort1:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var j:Int
            ^AlgBubbleSort1:5: error: not found: value lgr
	for (i <- 0 to lgr-2) { 
                       ^