sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var i:Int 
	var j:Int
	for (i <- 0 to lgr-2) { 
		if (plusPetit(i, j)) { 
			echange(i,i+1);
		}
		
		
				
			}
}
		

		
		
